--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 body {
     background: #f5f5f5;
     overflow-x: hidden;
-    font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif, 'Microsoft YaHei';
     color: #483a3a
 }
 
