--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ div.video_list ul.video {
     padding: 0;
     font-size: 0;
     margin-right: -20px;
+    margin-bottom: -20px;
 }
 
 div.video_list ul.video li {
@@ -221,6 +222,7 @@ div.video_list ul.video li {
     transition: all 0.5s;
     transition-delay: 0.25s;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 div.video_list ul.video li:hover {
