--- a/style.css
+++ b/style.css
@@ -234,10 +234,27 @@ div.video_list div.thumbnail {
     height: 158px;
     width: 255px;
     position: relative;
+    overflow: hidden;
 }
 
 div.video_list div.thumbnail img {
     display: block;
+}
+
+div.video_list div.new {
+    font-size: 12.5px;
+    background: #f3ca3d;
+    width: 70px;
+    height: 48px;
+    padding-top: 28px;
+    transform: rotate(-45deg) scale(0.8);
+    transform-origin: 0 0;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    top: 12px;
+    left: -27px;
 }
 
 div.video_list div.live {
