--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@
     100%   {top: 4px; box-shadow: 4px 4px 0 #f3ca3d;}
 }
 
+@keyframes video_thumbnail {
+    0%, 25%   {opacity: 0}
+    100%   {opacity: 1}
+}
+
 * {
     box-sizing: border-box;
 }
@@ -268,6 +273,23 @@ div.video_list li.new div.thumbnail:after {
     box-sizing: border-box;
     top: 12px;
     left: -27px;
+}
+
+div.video_list div.thumbnail video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: all 0.3s;
+    transition-delay: 0.15s;
+    background: black;
+    display: none;
+}
+
+div.video_list li:hover div.thumbnail video {
+    display: block;
+    opacity: 1;
+    animation: video_thumbnail 0.6s linear 0s 1;
 }
 
 div.video_list div.thumbnail img {
