--- a/style.css
+++ b/style.css
@@ -261,18 +261,18 @@ div.video_list div.thumbnail {
 div.video_list li.new div.thumbnail:after {
     content: "最新";
     display: block;
-    font-size: 12.5px;
+    font-size: 12px;
     background: #f3ca3d;
     width: 70px;
     height: 48px;
     padding-top: 28px;
-    transform: rotate(-45deg) scale(0.8);
+    transform: rotate(-45deg);
     transform-origin: 0 0;
     text-align: center;
     position: absolute;
     box-sizing: border-box;
-    top: 12px;
-    left: -27px;
+    top: 15px;
+    left: -35px;
 }
 
 div.video_list div.thumbnail video {
