--- a/style.css
+++ b/style.css
@@ -35,6 +35,157 @@
     100%   {opacity: 1}
 }
 
+@keyframes heart_icon {
+    0%, 30%   {transform: scale(0);}
+    50% {transform: scale(1.2);}
+    100%   {transform: scale(1);}
+}
+
+@keyframes heart_circle_main {
+    0% {
+        width: 22px;
+        height: 22px;
+        left: -4px;
+        top: -4px;
+        border: 11px solid #e24f95;
+    }
+    25% {
+        width: 30px;
+        height: 30px;
+        left: -8px;
+        top: -8px;
+        border: 15px solid #d29af7;
+    }
+    75% {
+        width: 30px;
+        height: 30px;
+        left: -8px;
+        top: -8px;
+        border: 4px solid #d29af7;
+    }
+    95% {
+        width: 30px;
+        height: 30px;
+        left: -8px;
+        top: -8px;
+        border: 2px solid #d29af7;
+    }
+    100% {
+        width: 30px;
+        height: 30px;
+        left: -8px;
+        top: -8px;
+        border: 0 solid #d29af7;
+    }
+}
+
+@keyframes heart_circle_suba {
+    15% {
+        width: 2px;
+        height: 2px;
+        left: 6px;
+        top: 6px;
+        box-shadow: -12px 0 0 #bad5ed,
+                    12px 0 0 #bce5d1,
+                    0 -12px 0 #bfd2f1,
+                    0 12px 0 #bed7e2,
+                    -8.5px -8.5px 0 #bee4d1,
+                    -8.5px 8.5px 0 #bdd7cc,
+                    8.5px -8.5px 0 #c3dae5,
+                    8.5px 8.5px 0 #b7cdf2;
+
+    }
+    30% {
+        width: 2px;
+        height: 2px;
+        left: 6px;
+        top: 6px;
+        box-shadow: -12px 0 0 #bad5ed,
+                    12px 0 0 #bce5d1,
+                    0 -12px 0 #bfd2f1,
+                    0 12px 0 #bed7e2,
+                    -8.5px -8.5px 0 #bee4d1,
+                    -8.5px 8.5px 0 #bdd7cc,
+                    8.5px -8.5px 0 #c3dae5,
+                    8.5px 8.5px 0 #b7cdf2;
+
+    }
+    100% {
+        width: 0px;
+        height: 0px;
+        left: 7px;
+        top: 7px;
+        box-shadow: -12px 0 0 #c495c9,
+                    12px 0 0 #c3d8b0,
+                    0 -12px 0 #7b9fc8,
+                    0 12px 0 #dac47b,
+                    -8.5px -8.5px 0 #a6c2c5,
+                    -8.5px 8.5px 0 #c3d8b0,
+                    8.5px -8.5px 0 #7b9fc8,
+                    8.5px 8.5px 0 #9c7fac;
+    }
+}
+
+@keyframes heart_circle_subb {
+    15% {
+        width: 2px;
+        height: 2px;
+        left: 6px;
+        top: 6px;
+        box-shadow: -12px 0 0 #bad5ed,
+                    12px 0 0 #bce5d1,
+                    0 -12px 0 #bfd2f1,
+                    0 12px 0 #bed7e2,
+                    -8.5px -8.5px 0 #bee4d1,
+                    -8.5px 8.5px 0 #bdd7cc,
+                    8.5px -8.5px 0 #c3dae5,
+                    8.5px 8.5px 0 #b7cdf2;
+
+    }
+    20% {
+        width: 4px;
+        height: 4px;
+        left: 5px;
+        top: 5px;
+        box-shadow: -14px 0 0 #c495c9,
+                    14px 0 0 #c3d8b0,
+                    0 -14px 0 #7b9fc8,
+                    0 14px 0 #dac47b,
+                    -10px -10px 0 #a6c2c5,
+                    -10px 10px 0 #c3d8b0,
+                    10px -10px 0 #7b9fc8,
+                    10px 10px 0 #9c7fac;
+    }
+    30% {
+        width: 2px;
+        height: 2px;
+        left: 6px;
+        top: 6px;
+        box-shadow: -14px 0 0 #c495c9,
+                    14px 0 0 #c3d8b0,
+                    0 -14px 0 #7b9fc8,
+                    0 14px 0 #dac47b,
+                    -10px -10px 0 #a6c2c5,
+                    -10px 10px 0 #c3d8b0,
+                    10px -10px 0 #7b9fc8,
+                    10px 10px 0 #9c7fac;
+    }
+    100% {
+        width: 0px;
+        height: 0px;
+        left: 7px;
+        top: 7px;
+        box-shadow: -16px 0 0 #c495c9,
+                    16px 0 0 #c3d8b0,
+                    0 -16px 0 #7b9fc8,
+                    0 16px 0 #dac47b,
+                    -11px -11px 0 #a6c2c5,
+                    -11px 11px 0 #c3d8b0,
+                    11px -11px 0 #7b9fc8,
+                    11px 11px 0 #9c7fac;
+    }
+}
+
 * {
     box-sizing: border-box;
 }
@@ -659,8 +810,89 @@ div.video_meta ul.info li.good:before {
     background-image: url(good.png);
 }
 
+div.video_meta ul.info li.like {
+    padding-left: 0;
+}
+
 div.video_meta ul.info li.like:before {
+    display: none;
+}
+
+div.video_meta ul.info li.like label {
+    padding-left: 24px;
+    cursor: pointer;
+}
+
+div.video_meta ul.info li.like div.heart {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    left: 0;
+    top: 0;
+}
+
+div.video_meta ul.info li.like div.heart input[type="checkbox"] {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    opacity: 0;
+    margin: 0;
+    z-index: 10;
+    cursor: pointer;
+}
+
+div.video_meta ul.info li.like div.heart div.icon {
     background-image: url(like.png);
+    background-size: contain;
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    left: 0;
+    top: 0;
+}
+
+div.video_meta ul.info li.like:hover div.heart div.icon {
+    background-image: url(like_color.png);
+}
+
+div.video_meta ul.info li.like div.heart input[type="checkbox"]:checked + div.icon {
+    background-image: url(like_color.png);
+    animation: heart_icon 0.4s linear 0s 1;
+    transform-origin: 50% 50%;
+}
+
+div.video_meta ul.info li.like div.heart div.circles {
+    position: absolute;
+    z-index: 5;
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    left: 0;
+    top: 0;
+}
+
+div.video_meta ul.info li.like div.heart div.circles:before,
+div.video_meta ul.info li.like div.heart div.circles:after {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+}
+
+div.video_meta ul.info li.like div.heart div.circles:after {
+    transform: rotate(105deg);
+}
+
+div.video_meta ul.info li.like div.heart input[type="checkbox"]:checked + div.icon + div.circles {
+    animation: heart_circle_main 0.2s linear 0s 1;
+}
+
+div.video_meta ul.info li.like div.heart input[type="checkbox"]:checked + div.icon + div.circles:before {
+    animation: heart_circle_suba 0.4s linear 0s 1;
+}
+
+div.video_meta ul.info li.like div.heart input[type="checkbox"]:checked + div.icon + div.circles:after {
+    animation: heart_circle_subb 0.5s linear 0s 1;
 }
 
 div.video_meta div.share {
